# star-cargo

./: .gitignore  .prettierrc.json  README.md
star-cargo-back/: Cargo.toml
star-cargo-back/src/: database.rs  dto.rs  handlers.rs  main.rs  models.rs
star-cargo-front/: .env  README.md  angular.json  package.json
star-cargo-front/src/: index.html
star-cargo-front/src/app/: app.component.spec.ts  app.component.ts
star-cargo-front/src/compo/: ChartEditor.svelte  ChartSimple.svelte  UpvoteProgress.svelte  chart-editor.ts
star-cargo-front/src/routes/: +layout.svelte  +page.server.js  +page.svelte
star-cargo-front/src/routes/chart/create/: +page.svelte
star-cargo-front/src/routes/chart/edit/[chart]/: +page.svelte
star-cargo-front/src/routes/chart/view/[chart]/: +page.svelte
star-cargo-front/src/routes/chartEdit/: +page.svelte
star-cargo-front/src/routes/charts/: +page.svelte
star-cargo-front/static/: style.css
