[package]
name = "star-cargo-back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.13.0"
mongodb = "2.0"
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["full"] }